--- a/roles/zabbix-server/vars/main.yml
+++ b/roles/zabbix-server/vars/main.yml
@@ -2,13 +2,13 @@
 # Data got from zabbix documentation:
 #  https://www.zabbix.com/download?zabbix=7.0&os_distribution=ubuntu&os_version=24.04&components=server_frontend_agent&db=pgsql&ws=nginx
 # After selecting the options:
-#  - Verison: 7.0PRE-RELEASE
+#  - Verison: 7.0
 #  - OS Distribution: Ubuntu
 #  - OS Version: 24.04 (Noble)
 #  - Database: PostgreSQL
 #  - Web Server: Nginx
 
-zabbix_repository_package_url: https://repo.zabbix.com/zabbix/6.5/ubuntu/pool/main/z/zabbix-release/zabbix-release_6.5-2+ubuntu24.04_all.deb
+zabbix_repository_package_url: https://repo.zabbix.com/zabbix/7.0/ubuntu/pool/main/z/zabbix-release/zabbix-release_7.0-1+ubuntu24.04_all.deb
 install_packages:
   - zabbix-server-pgsql
   - zabbix-frontend-php
