--- a/environments/production/hosts.yml
+++ b/environments/production/hosts.yml
@@ -12,3 +12,7 @@ production:
       ansible_host: x.x.x.x
     zabbix:
       ansible_host: x.x.x.x
+    gitlab:
+      ansible_host: x.x.x.x
+    letsencrypt:
+      ansible_host: x.x.x.x
