--- a/environments/development/hosts.yml
+++ b/environments/development/hosts.yml
@@ -12,3 +12,7 @@ development:
       ansible_host: x.x.x.x
     zabbix:
       ansible_host: x.x.x.x
+    gitlab:
+      ansible_host: x.x.x.x
+    letsencrypt:
+      ansible_host: x.x.x.x
